# httpxx

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
source/: Factory.hpp  Request.hpp  httpxx.hpp  httpxx_types.hpp  main.cpp
source/decoder/: Decoder.cpp  Decoder.hpp  DecoderDefinitions.hpp
source/encoder/: Encoder.cpp  Encoder.hpp
source/validate/: Validate.cpp  Validate.hpp
tests/: CMakeLists.txt
tests/unit/Decoder/: DetectRequestTest.cpp
tests/unit/Encoder/: EncodeRequestGet.cpp  EncodeRequestGet.hpp  EncoderRequestGetTest.cpp  EncoderTest.cpp  EncoderTest.hpp
tests/unit/Factory/: FactoryTest.cpp
tests/unit/TypeRequest/: TypeRequestTest.cpp  TypeRequestTest.hpp
tests/unit/Validate/: ValidateTest.cpp
tools/: httpxx_aliases.sh  x64compile.sh  x64release.sh
